--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h3>Helllo</h3>
-</body>
-</html>
+<div>
+
+    <head>
+        <title>
+            Spender
+        </title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <table>
+            <tr>
+                <td>
+                    <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+                        <div>
+                            <label>Proyecto</label><label class="validation-error hide"
+                                id="projectValidationError"></label>
+                            <input type="text" name="project" id="project">
+                        </div>
+                        <div>
+                            <label>Presupuesto</label>
+                            <input type="text" name="budget" id="budget">
+                        </div>
+
+                        <div class="form-action-buttons">
+                            <input type="submit" value="Submit">
+                        </div>
+                    </form>
+                </td>
+                <td>
+                    <table class="list" id="budgetList">
+                        <thead>
+                            <tr>
+                                <th>Proyecto</th>
+                                <th>Presupuesto</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <script src="app.js"></script>
+    </body>
+
+</div>
