just numbers are allowed into buget input

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             </div>
             <div>
               <label>Presupuesto</label>
-              <input type="text" name="budget" id="budget" />
+              <input type="number" name="budget" id="budget" />
             </div>
 
             <div class="form-action-buttons">
