--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<div>
+<html lang="en">
 
-    <head>
-        <title>
-            Spender
-        </title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
+    <title>Spender</title>
+</head>
+
+<body>
+
 
     <body>
         <table>
@@ -44,7 +48,9 @@
                 </td>
             </tr>
         </table>
+
         <script src="app.js"></script>
     </body>
+</body>
 
-</div>
+</html>
