adding structure to html

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<div>
+<html lang="en">
   <head>
-    <title>
-      Spender
-    </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Spender</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
     <table>
       <tr>
@@ -50,4 +50,4 @@
 
     <script src="app.js"></script>
   </body>
-</div>
+</html>
