hidding new project form

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <tr>
         <td>
           <form
+            id="form"
             onsubmit="event.preventDefault();onFormSubmit();"
             autocomplete="off"
           >
