adding new table with addexpense function

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,9 @@
 
 <body>
     <table>
-<<<<<<< HEAD
         <tr>
             <td>
-                <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+                <form id="form" onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
                     <div>
                         <label>Proyecto</label><label class="validation-error hide" id="projectValidationError"></label>
                         <input type="text" name="project" id="project" />
@@ -23,27 +22,6 @@
                         <label>Presupuesto</label>
                         <input type="number" name="budget" id="budget" />
                     </div>
-=======
-      <tr>
-        <td>
-          <form
-            id="form"
-            onsubmit="event.preventDefault();onFormSubmit();"
-            autocomplete="off"
-          >
-            <div>
-              <label>Proyecto</label
-              ><label
-                class="validation-error hide"
-                id="projectValidationError"
-              ></label>
-              <input type="text" name="project" id="project" />
-            </div>
-            <div>
-              <label>Presupuesto</label>
-              <input type="number" name="budget" id="budget" />
-            </div>
->>>>>>> upstream/master
 
                     <div class="form-action-buttons">
                         <input type="submit" value="Submit" />
@@ -64,6 +42,7 @@
             </td>
         </tr>
     </table>
+    <div id="probando"></div>
 
     <script src="app.js"></script>
 </body>
