commiting for download

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             </div>
             <div>
               <label>Presupuesto</label>
-              <input type="number" name="budget" id="budget" />
+              <input type="cantidad" name="budget" id="budget" />
             </div>
 
             <div class="form-action-buttons">
