--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Spender</title>
@@ -22,7 +23,7 @@
         <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
         <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
       </div>
-
+<div id="budget-box" style="visibility: hidden"></div>
   <table>
     <tr>
       <td>
@@ -56,7 +57,7 @@
     </thead>
     <tbody></tbody>
   </table>
-  <div id="secondtable">
+  <div id="foot">
 
   </div>
 
