--- a/src/index.html
+++ b/src/index.html
@@ -2,81 +2,64 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Spender</title>
-  <link rel="stylesheet" href="styles.css" />
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+ <title>Spender</title>
+ <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="display-4">Spender</h1>
-        <!-- <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
-        <hr class="my-4">
-          
-  <table class="list" id="budgetList" style="visibility: hidden">
-      <tbody class="lead"></tbody>
-    </table>
-        <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
-        <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
-      </div>
-<div id="budget-box" style="visibility: hidden"></div>
-  <table>
-    <tr>
-      <td>
-        <form id="form" onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
-          <div>
-            <label>Proyecto</label><label class="validation-error hide" id="projectValidationError"></label>
-            <input type="text" name="project" id="project" />
-          </div>
-          <div>
-            <label>Presupuesto</label>
-            <input type="number" name="budget" id="budget" />
-          </div>
+ <table>
+   <tr>
+     <td>
+       <form id="form" onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+         <div>
+           <label>Proyecto</label><label class="validation-error hide" id="projectValidationError"></label>
+           <input type="text" name="project" id="project" />
+         </div>
+         <div>
+           <label>Presupuesto:</label>
+           <input type="number" name="budget" id="budget" />
+         </div>
 
-          <div class="form-action-buttons">
-            <input type="submit" value="Submit" />
-          </div>
-        </form>
-      </td>
-      <td>
-      </td>
-    </tr>
-  </table>
-  
-  <table class="list" id="budgetList" style="visibility: hidden">
-    <thead>
-      <tr>
-        <th>Proyecto</th>
-        <th>Presupuesto</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <div id="foot">
+         <div class="form-action-buttons">
+           <input type="submit" value="Submit" />
+         </div>
+       </form>
+     </td>
+     <td>
+       <table class="list" id="budgetList">
+         <thead>
+           <tr>
+             <th>Proyecto</th>
+             <th>Presupuesto</th>
+             <th></th>
+           </tr>
+         </thead>
+         <tbody></tbody>
+       </table>
+     </td>
+   </tr>
+ </table>
 
-  </div>
+ <div id="secondtable">
 
-  <table class="list" id="expensesList" style="visibility: hidden">
-    <thead>
-      <tr>
-        <th>Concepto</th>
-        <th>Total</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+ </div>
+
+ <table class="list" id="expensesList">
+   <thead>
+     <tr>
+       <th>Concepto</th>
+       <th>Total</th>
+       <th></th>
+     </tr>
+   </thead>
+   <tbody></tbody>
+ </table>
 
 
-  <script src="app.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ <script src="app.js"></script>
 </body>
 
 </html>
