--- a/src/index.html
+++ b/src/index.html
@@ -1,75 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Spender</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-<<<<<<< HEAD
-  <body>
-    <div id="imprimir">
-      <table>
-        <tr>
-          <td>
-            <form
-              id="form"
-              onsubmit="event.preventDefault();onFormSubmit();"
-              autocomplete="off"
-            >
-              <div>
-                <label>Proyecto</label
-                ><label
-                  class="validation-error hide"
-                  id="projectValidationError"
-                ></label>
-                <input type="text" name="project" id="project" />
-              </div>
-              <div>
-                <label>Presupuesto</label>
-                <input type="number" name="budget" id="budget" />
-              </div>
-
-              <div class="form-action-buttons">
-                <input type="submit" value="Submit" />
-              </div>
-            </form>
-          </td>
-          <td>
-            <table class="list" id="budgetList">
-              <thead>
-                <tr>
-                  <th>Proyecto</th>
-                  <th>Presupuesto</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </td>
-        </tr>
-      </table>
-
-      <div id="secondtable"></div>
-
-      <table class="list" id="expensesList">
-        <thead>
-          <tr>
-            <th>Concepto</th>
-            <th>Total</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
-    <script src="app.js"></script>
-  </body>
-</html>
-=======
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -80,6 +11,7 @@
 </head>
 
 <body>
+  <div id="printDiv">
 <main>
     <header>
         <h1>Spender</h1>
@@ -117,9 +49,16 @@
 </section>
 <div id="secondtable"></div>
 <div id="add-expence"></div>
-
+</div>
+<button type="button" id="pdfDownloader">Download</button>
+<script
+src="https://code.jquery.com/jquery-3.4.1.min.js"
+integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+crossorigin="anonymous"
+></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
     <script src="app.js"></script>
 </body>
 </main>
 </html>
->>>>>>> upstream/master
