creating tale of expenses

--- a/src/index.html
+++ b/src/index.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spender</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+        integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-<main>
-    <header>
-        <h1>Spender</h1>
-    </header>
+    <main>
+        <header>
+            <h1>Spender</h1>
+        </header>
 
-    <section id="project-and-budget">
-        <table class="list" id="budgetList">
-            <tbody></tbody>
-        </table>
-    </section>
-    <section id="form-new-edit-project">
+        <section id="project-and-budget">
+            <table class="list" id="budgetList">
+                <tbody></tbody>
+            </table>
+        </section>
+        <section id="form-new-edit-project">
             <form id="form" onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
                 <div>
                     <label>Proyecto</label><label class="validation-error hide" id="projectValidationError"></label>
@@ -31,25 +34,40 @@
                     <label>Presupuesto</label>
                     <input type="number" name="budget" id="budget" />
                 </div>
-    
+
                 <div class="form-action-buttons">
                     <input type="submit" value="Aceptar" />
                 </div>
             </form>
         </section>
-    
 
-    <section id="expenses">
-    <table class="list" id="expensesList">
-        <thead>
-        </thead>
-        <tbody></tbody>
-    </table>
-</section>
-<div id="secondtable"></div>
-<div id="add-expence"></div>
 
-    <script src="app.js"></script>
+        <section id="expenses">
+            <table class="list table table-hover " style="display: table;" id="expensesList">
+                <tbody>
+                    <tr>
+
+                    </tr>
+
+                </tbody>
+            </table>
+        </section>
+        <div id="secondtable" class="pl-5"></div>
+        <div id="add-expence"></div>
+
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+
+        <script src="app.js"></script>
 </body>
 </main>
+
 </html>
