--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 
 <body>
     <main>
-        <header>
+        <nav class="navbar">
             <h1>Spender</h1>
-        </header>
+            <i class="fas fa-file-download" id="pdfDownloader" style="visibility: hidden"></i>
+        </nav>
 
         <section id="project-and-budget">
             <table class="list" id="budgetList">
@@ -34,9 +35,9 @@
                     <label>Presupuesto</label>
                     <input type="number" name="budget" id="budget" />
                 </div>
-
+                    <br>
                 <div class="form-action-buttons">
-                    <input type="submit" value="Aceptar" />
+                    <input type="submit" value="Aceptar" id="create">
                 </div>
             </form>
         </section>
@@ -52,7 +53,7 @@
 <div id="secondtable"></div>
 <div id="add-expence"></div>
 </div>
-<button type="button" id="pdfDownloader">Download</button>
+
 <script
 src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
